--- a/graph.html
+++ b/graph.html
@@ -1,1 +1,1 @@
-<iframe width="100%" height="100%" frameborder="0" scrolling="no" src="[Link to plotly graph]"></iframe>
+<iframe width="100%" height="100%" frameborder="0" scrolling="no" src="REPLACE_ME"></iframe>
